# ashcroft-chatper-7

./: Cargo.toml  README.md
.vim/: coc-settings.json
processing/ashcroft_chapter_7/: ashcroft_chapter_7.pde  bravais.pde  matrix.pde  playground.pde  point_group.pde
src/: main.rs
