[package]
name = "ashcroft-chatper-7"
version = "0.1.0"
authors = ["e5f6bd <41416412+e5f6bd@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.30.0"
kiss3d = "0.31.0"
sdl2 = "0.34.5"
